# ai-street-market-agents-py

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  baker.py  farmer.py  merchant.py  woodcutter.py
scripts/: run.py
tests/: conftest.py  test_baker.py  test_farmer.py  test_merchant.py  test_woodcutter.py
